--- a/index.html
+++ b/index.html
@@ -1,41 +1,14 @@
+<!DOCTYPE html>
 <html>
-<head>
-<title>Online RPG Game</title>
-<style>
-
-</style>
-</head>
-<body>
-<style>
-    body {
-        font-family: cursive;
-        font-size: 15px;
-    }
-    #gameb {
-        border: 2px solid black;
-        border-radius: 25px;
-        width: 140%;
-        height: 90%;
-        padding: 5px;
-    }
-    #statsb {
-        border: 2px solid black;
-        border-radius: 25px;
-        width: 60%;
-        height: 90%;
-        padding: 5px;
-    }
-</style>
-<table>
-<tr>
-<td><img src="logo.png" /></td>
-</tr>
-<tr>
-<td id="gameb"><div id="game"></div>
-</td>
-<td id="statsb" valign="bottom"><div id="stats"></div></td>
-</tr>
-</table>
-<script type="text/javascript" src="script.js"></script>
-</body>
+    <table>
+    <tr>
+    <td></td><td></td><td></td>
+    </tr>
+    <tr>
+    <td></td><td><img src="scoutcicon.png"></td><td></td>
+    </tr>
+    <tr>
+    <td></td><td></td><td></td>
+    </tr>
+    </table>
 </html>
