--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html>
-    <table>
-    <tr>
-    <td></td><td></td><td></td>
-    </tr>
-    <tr>
-    <td></td><td><img src="scoutcicon.png"></td><td></td>
-    </tr>
-    <tr>
-    <td></td><td></td><td></td>
-    </tr>
-    </table>
+    <head>
+        <title>scoutchorton</title>
+    </head>
+    <body>
+        <table>
+            <tr>
+                <td></td><td></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td><img src="scoutcicon.png"><p>scoutchorton's website</p></td><td></td>
+            </tr>
+            <tr>
+                <td></td><td></td><td></td>
+            </tr>
+        </table>
+    </body>
 </html>
