--- a/index.html
+++ b/index.html
@@ -4,7 +4,17 @@
         <title>scoutchorton</title>
     </head>
     <body>
-        <table>
+        <style>
+            .Absolute-Center {
+                width: 50%;
+                height: 50%;
+                overflow: auto;
+                margin: auto;
+                position: absolute;
+                top: 0; left: 0; bottom: 0; right: 0;
+            }
+        </style>
+        <table class="Absolute-Center">
             <tr>
                 <td></td><td></td><td></td>
             </tr>
