--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <td></td><td></td><td></td>
             </tr>
             <tr>
-                <td></td><td><img src="scoutcicon.png"><p>scoutchorton's website</p></td><td></td>
+                <td></td><td><img class="Absolute-Center" src="scoutcicon.png"><p class="Absolute-Center">scoutchorton's website</p></td><td></td>
             </tr>
             <tr>
                 <td></td><td></td><td></td>
