--- a/game.html
+++ b/game.html
@@ -36,6 +36,6 @@
 <td id="statsb" valign="bottom"><div id="stats"></div></td>
 </tr>
 </table>
-<script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="gamescript.js"></script>
 </body>
 </html>
