--- a/index.html
+++ b/index.html
@@ -24,11 +24,10 @@
             </table>
             <div class="page">
                 <br>
-                New scoutchorton website!!
+                <u style="font-size: 20px;">New scoutchorton website!!</u><br>
                 <br>
-                <br>
-                Now, things should be here. I don't have a proper method of updating this, other than literally editing the file from my computer, so it'll be tough.
-                <br>
+                Now, things should be here.<br>
+                I don't have a proper method of updating this, other than literally editing the file from my computer, so it'll be tough.<br>
                 <br>
                 <br>
                 Todos:
@@ -44,7 +43,11 @@
         <div id="footer">
             <span style="text-align: left;">Powered by github. Go make an account for free at <a href="https://github.com/">github.com</a>. Realy, go do it.</span>
             <br>
-            <span style="text-align: right;">Nerd. Friend. Christian.<br>scoutchorton</span>
+            <table width="100%">
+                <tr>
+                    <td style="text-align: left;" width="33%">Nerd. Friend. Christian.</td><td id="socicons" align="center" width="33%"><a href="https://www.youtube.com/user/scoutchorton"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
