--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <br>
             <table width="100%">
                 <tr>
-                    <td style="text-align: left;" width="33%">Nerd. Friend. Christian.</td><td id="socicons" align="center" width="33%"><a href="https://www.youtube.com/user/scoutchorton"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
+                    <td style="text-align: left;" width="33%">Nerd. Friend. Christian.</td><td id="socicons" align="center" width="33%"><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
                 </tr>
             </table>
         </div>
