--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <title>scoutchorton</title>
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed" rel="stylesheet">
+        <link rel="icon" href="scoutcicon.png" type="image/png">
     </head>
     <body>
         <center>
