--- a/programming.html
+++ b/programming.html
@@ -8,7 +8,21 @@
     </head>
     <body>
         <center>
-            <include href="nav.html" />
+            <table cellpadding="0">
+                <tr>
+                    <td class="navleft" onmouseover="expand(this)"><a>Home</a></td>
+                    <td rowspan="3" style="text-align: center; vertical-align: middle;"><img src="scoutcicon.png" id="face"/></td>
+                    <td class="navright"><a>Programming</a></td>
+                </tr>
+                <tr>
+                    <td class="navleft"><a>Blog</a></td>
+                    <td class="navright"><a>Weebly</a></td>
+                </tr>
+                <tr>
+                    <td class="navleft"><a>Tools</a></td>
+                    <td class="navright"><a>Help</a></td>
+                </tr>
+            </table>
             <div class="page">
                 <br>
                 <u style="font-size: 20px;">New scoutchorton website!!</u><br>
