--- a/index.html
+++ b/index.html
@@ -8,7 +8,23 @@
     </head>
     <body>
         <center>
-            <include href="nav.html" />
+            <table cellpadding="0">
+                <tbody>
+                    <tr>
+                        <td class="navleft" onmouseover="expand(this)"><a>Blog</a></td>
+                        <td rowspan="3" style="text-align: center; vertical-align: middle;"><a href=index.html><img src="scoutcicon.png" id="face"></a></td>
+                        <td class="navright"><a>Help</a></td>
+                    </tr>
+                    <tr>
+                        <td class="navleft"><a>Tools</a></td>
+                        <td class="navright"><a>Weebly</a></td>
+                    </tr>
+                    <tr>
+                        <td class="navleft"><a>Photography</a></td>
+                        <td class="navright"><a>Programming</a></td>
+                    </tr>
+                </tbody>
+            </table>
             <div class="page">
                 <br>
                 <u style="font-size: 20px;">New scoutchorton website!!</u><br>
@@ -32,7 +48,7 @@
             <br>
             <table width="100%">
                 <tr>
-                    <td style="text-align: left;" width="33%">Nerd. Friend. Christian.</td><td id="socicons" align="center" width="33%"><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
+                    <td style="text-align: left;" width="33%">Nerd. Friend. Christian.</td><td id="socicons" align="center" ><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
                 </tr>
             </table>
         </div>
