--- a/index.html
+++ b/index.html
@@ -1,19 +1,64 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>scoutchorton</title>
         <link rel="stylesheet" type="text/css" href="styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed" rel="stylesheet">
         <link rel="icon" href="scoutcicon.png" type="image/png">
+        <script>
+        function fadingin(){
+            var element = document.getElementById("navt");
+            fade(element);
+        }
+        </script>
     </head>
     <body>
-        <table style="padding-bottom: 10px;">
-            <tr>
-                <td><img width="75px" height="75px" style="padding-right: 25px;" src="scoutcicon.png"/></td>
-                <td><div class="nav">Blog</div><div class="nav">Programming</div><div class="nav">Tools</div><div class="nav">Photography</div><div class="nav">Help</div><div class="nav">Weebly</div></td>
-            </tr>
-        </table>
-        <div id="main">
-            Heyo!
+        <div id="menu">
+            <div style="margin-right: 0;">
+            <table cellpadding="0" id="navt">
+                <tbody>
+                    <tr>
+                        <td id="face" style="text-align: center; vertical-align: middle;"><a     href=index.html><img src="scoutcicon.png" /></a></td>
+                        <td class="nav"><a class="navi">Photography</a></td>
+                        <td class="nav"><a class="navi">Tools</a></td>
+                        <td class="nav"><a class="navi">Blog</a></td>
+                        <td class="nav"><a class="navi">Help</a></td>
+                        <td class="nav"><a class="navi">Weebly</a></td>
+                        <td class="nav"><a class="navi">Programming</a></td>
+                    </tr>
+                </tbody>
+            </table>
+            </div>                                                 <div>
+            <img id="menuimg" src="menu.svg" />
+            </div>
+        </div>
+        <center>
+            <div class="page">
+                <br>
+                <u style="font-size: 20px;">New scoutchorton website!!</u><br>
+                <br>
+                Now, things should be here.<br>
+                I don't have a proper method of updating this, other than literally editing the file from my computer, so it'll be tough.<br>
+                <br>
+                <br>
+                Todos:
+                <ul>
+                    <li>Start Blog layout and transfer few posts</li>
+                    <li>Add submenu to Programming</li>
+                    <li>Spruce things up a bit (make it more 2016, not 1998)</li>
+                    <li>Add personal flair (have to get that Ubuntu font!)</li>
+                    <li>Actually add pages</li>
+                </ul>
+            </div>
+        </center>
+        <div id="footer">
+            <span style="text-align: left;">Powered by github. Go make an account for free at <a href="https://github.com/">github.com</a>. Realy, go do it.</span>
+            <br>
+            <table width="100%">
+                <tr>
+                    <td style="text-align: left;" width="33%">Nerd. Friend. Christian.</td><td id="socicons" align="center" ><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
+                </tr>
+            </table>
         </div>
     </body>
 </html>
