--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <td class="nav"><a class="navi">Blog</a></td>
                         <td class="nav"><a class="navi">Help</a></td>
                         <td class="nav"><a class="navi">Weebly</a></td>
-                        <td class="nav"><a class="navi">Programming</a></td>
+                        <td class="nav"><a class="navi" href="Modz.7z" download>Programming</a></td>
                     </tr>
                 </tbody>
             </table>
