--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <td class="nav"><a class="navi">Blog</a></td>
                         <td class="nav"><a class="navi">Help</a></td>
                         <td class="nav"><a class="navi">Weebly</a></td>
-                        <td class="nav"><a class="navi" href="Modz.7z" download>Programming</a></td>
+                        <td class="nav"><a class="navi">Programming</a></td>
                     </tr>
                 </tbody>
             </table>
@@ -48,6 +48,13 @@
                     <li>Spruce things up a bit (make it more 2016, not 1998)</li>
                     <li>Add personal flair (have to get that Ubuntu font!)</li>
                     <li>Actually add pages</li>
+                </ul>
+                Mods:
+                <ul>
+                    <li><a href="modz1.7z" download>modz1</a></li>
+                    <li><a href="modz2.7z" download>modz2</a></li>
+                    <li><a href="modz3.7z" download>modz3</a></li>
+                    <li><a href="modz4.7z" download>modz4</a></li>
                 </ul>
             </div>
         </center>
