--- a/index.html
+++ b/index.html
@@ -49,15 +49,7 @@
                     <li>Add personal flair (have to get that Ubuntu font!)</li>
                     <li>Actually add pages</li>
                 </ul>
-                <!--
-                Mods:
-                <ul>
-                    <li><a href="modz1.7z" download>modz1</a></li>
-                    <li><a href="modz2.7z" download>modz2</a></li>
-                    <li><a href="modz3.7z" download>modz3</a></li>
-                    <li><a href="modz4.7z" download>modz4</a></li>
-                </ul>
-                -->
+                Click <a href="./install.sh" download>here</a> to download the Linux installer for my Python Line Grapher!
                 <a href="http://adfoc.us/serve/sitelinks/?id=271228&amp;url=http://files.minecraftforge.net/maven/net/minecraftforge/forge/1.7.10-10.13.4.1566-1.7.10/forge-1.7.10-10.13.4.1566-1.7.10-installer-win.exe">DOwnload forge for windows</a>
             </div>
         </center>
