--- a/nav.html
+++ b/nav.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" type="text/css" href="styles.css" />
 <div id="menu">
             <div style="margin-right: 0;">
             <table cellpadding="0" id="navt">
