Attempt with outside navigation file

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
             fade(element);
         }
         </script>
+        <script src="https://www.w3schools.com/lib/w3.js"></script>
     </head>
     <body>
+        <!--
         <div id="menu">
             <div style="margin-right: 0;">
             <table cellpadding="0" id="navt">
@@ -32,6 +34,8 @@
             <img id="menuimg" src="menu.svg" />
             </div>
         </div>
+        -->
+        <div w3-include-html="nav.html"></div>
         <center>
             <div class="page">
                 <br>
@@ -61,5 +65,8 @@
                 </tr>
             </table>
         </div>
+        <script>
+            w3.includeHTML();
+        </script>
     </body>
 </html>
