--- a/nav.html
+++ b/nav.html
@@ -1,20 +1,21 @@
 <link rel="stylesheet" type="text/css" href="styles.css" />
 <div id="menu">
-            <div style="margin-right: 0;">
-            <table cellpadding="0" id="navt">
-                <tbody>
-                    <tr>
-                        <td id="face" style="text-align: center; vertical-align: middle;"><a     href=index.html><img src="scoutcicon.png" /></a></td>
-                        <td class="nav"><a class="navi">Photography</a></td>
-                        <td class="nav"><a class="navi">Tools</a></td>
-                        <td class="nav"><a class="navi">Blog</a></td>
-                        <td class="nav"><a class="navi">Help</a></td>
-                        <td class="nav"><a class="navi">Weebly</a></td>
-                        <td class="nav"><a class="navi">Programming</a></td>
-                    </tr>
-                </tbody>
-            </table>
-            </div>                                                 <div>
-            <img id="menuimg" src="menu.svg" />
-            </div>
-            </div>
+    <div style="margin-right: 0;">
+        <table cellpadding="0" id="navt">
+            <tbody>
+                <tr>
+                    <td id="face" style="text-align: center; vertical-align: middle;"><a     href=index.html><img src="scoutcicon.png" /></a></td>
+                    <td class="nav"><a class="navi">Photography</a></td>
+                    <td class="nav"><a class="navi">Tools</a></td>
+                    <td class="nav"><a class="navi">Blog</a></td>
+                    <td class="nav"><a href="./BIbleThoughts" class="navi">Bible Thoughts</a></td>
+                    <td class="nav"><a class="navi">Weebly</a></td>
+                    <td class="nav"><a class="navi">Programming</a></td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+    <div>
+        <img id="menuimg" src="menu.svg" />
+    </div>
+</div>
