--- a/nav.html
+++ b/nav.html
@@ -8,7 +8,7 @@
                     <td class="nav"><a class="navi">Photography</a></td>
                     <td class="nav"><a class="navi">Tools</a></td>
                     <td class="nav"><a class="navi">Blog</a></td>
-                    <td class="nav"><a href="./BIbleThoughts" class="navi">Bible Thoughts</a></td>
+                    <td class="nav"><a href="./BibleThoughts" class="navi">Bible Thoughts</a></td>
                     <td class="nav"><a class="navi">Weebly</a></td>
                     <td class="nav"><a class="navi">Programming</a></td>
                 </tr>
