Changed file to be relative to the folder

--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,7 @@
         <table cellpadding="0" id="navt">
             <tbody>
                 <tr>
-                    <td id="face" style="text-align: center; vertical-align: middle;"><a     href=index.html><img src="scoutcicon.png" /></a></td>
+                    <td id="face" style="text-align: center; vertical-align: middle;"><a     href=index.html><img src="./scoutcicon.png" /></a></td>
                     <td class="nav"><a class="navi">Photography</a></td>
                     <td class="nav"><a class="navi">Tools</a></td>
                     <td class="nav"><a class="navi">Blog</a></td>
@@ -16,6 +16,6 @@
         </table>
     </div>
     <div>
-        <img id="menuimg" src="menu.svg" />
+        <img id="menuimg" src="./menu.svg" />
     </div>
 </div>
