Changed realative links.

--- a/nav.html
+++ b/nav.html
@@ -1,10 +1,10 @@
-<link rel="stylesheet" type="text/css" href="./styles.css" />
+<link rel="stylesheet" type="text/css" href="https://scoutchorton.github.io/styles.css" />
 <div id="menu">
     <div style="margin-right: 0;">
         <table cellpadding="0" id="navt">
             <tbody>
                 <tr>
-                    <td id="face" style="text-align: center; vertical-align: middle;"><a href="./index.html"><img src="https://scoutchorton.github.io" /></a></td>
+                    <td id="face" style="text-align: center; vertical-align: middle;"><a href="./index.html"><img src="https://scoutchorton.github.io/scoutcicon.png" /></a></td>
                     <td class="nav"><a class="navi">Photography</a></td>
                     <td class="nav"><a class="navi">Tools</a></td>
                     <td class="nav"><a class="navi">Blog</a></td>
