--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
                     <li>Add personal flair (have to get that Ubuntu font!)</li>
                     <li>Actually add pages</li>
                 </ul>
-                Click <a href="./install.sh" download>here</a> to download the Linux installer for my Python Line Grapher!
+                <a href="./EnglishVocab">English Vocab page</a>
+                <!-- Click <a href="./install.sh" download>here</a> to download the Linux installer for my Python Line Grapher! -->
             </div>
         </center>
         <div id="footer">
