Updated more links

--- a/nav.html
+++ b/nav.html
@@ -4,11 +4,11 @@
         <table cellpadding="0" id="navt">
             <tbody>
                 <tr>
-                    <td id="face" style="text-align: center; vertical-align: middle;"><a href="./index.html"><img src="https://scoutchorton.github.io/scoutcicon.png" /></a></td>
+                    <td id="face" style="text-align: center; vertical-align: middle;"><a href="https://scoutchorton.github.io/index.html"><img src="https://scoutchorton.github.io/scoutcicon.png" /></a></td>
                     <td class="nav"><a class="navi">Photography</a></td>
                     <td class="nav"><a class="navi">Tools</a></td>
                     <td class="nav"><a class="navi">Blog</a></td>
-                    <td class="nav"><a href="./BibleThoughts" class="navi">Bible Thoughts</a></td>
+                    <td class="nav"><a href="https://scoutchorton.github.io/BibleThoughts" class="navi">Bible Thoughts</a></td>
                     <td class="nav"><a class="navi">Weebly</a></td>
                     <td class="nav"><a class="navi">Programming</a></td>
                 </tr>
@@ -16,6 +16,6 @@
         </table>
     </div>
     <div>
-        <img id="menuimg" src="./menu.svg" />
+        <img id="menuimg" src="https://scoutchorton.github.io/menu.svg" />
     </div>
 </div>
