Face navigates to main page, not index.html of the main page

--- a/nav.html
+++ b/nav.html
@@ -4,7 +4,7 @@
         <table cellpadding="0" id="navt">
             <tbody>
                 <tr>
-                    <td id="face" style="text-align: center; vertical-align: middle;"><a href="https://scoutchorton.github.io/index.html"><img src="https://scoutchorton.github.io/scoutcicon.png" /></a></td>
+                    <td id="face" style="text-align: center; vertical-align: middle;"><a href="https://scoutchorton.github.io"><img src="https://scoutchorton.github.io/scoutcicon.png" /></a></td>
                     <td class="nav"><a class="navi">Photography</a></td>
                     <td class="nav"><a class="navi">Tools</a></td>
                     <td class="nav"><a class="navi">Blog</a></td>
