--- a/programming/electronegativity.html
+++ b/programming/electronegativity.html
@@ -1,1 +1,37 @@
-<!--Comment-->
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>scoutchorton</title>
+        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed" rel="stylesheet">
+        <link rel="icon" href="scoutcicon.png" type="image/png">
+        <script>
+        function fadingin(){
+            var element = document.getElementById("navt");
+            fade(element);
+        }
+        </script>
+        <script src="https://www.w3schools.com/lib/w3.js"></script>
+        <script src="http://scoutchorton.github.io/periodic/periodic.js"></script>
+    </head>
+    <body>
+        <div w3-include-html="nav.html"></div>
+        <center>
+            <div class="page">
+              <h3>test.</h3>
+            </div>
+        </center>
+        <div id="footer">
+            <span style="text-align: left;">Powered by github. Go make an account for free at <a href="https://github.com/">github.com</a>. Realy, go do it.</span>
+            <br>
+            <table width="100%">
+                <tr>
+                    <td id="socicons" align="center" ><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
+                </tr>
+            </table>
+        </div>
+        <script>
+            w3.includeHTML();
+        </script>
+    </body>
+</html>
