Changed values that were relative to file

--- a/programming/electronegativity.html
+++ b/programming/electronegativity.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>scoutchorton</title>
-        <link rel="stylesheet" type="text/css" href="styles.css" />
+        <link rel="stylesheet" type="text/css" href="http://scoutchorton.github.io/styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed" rel="stylesheet">
-        <link rel="icon" href="scoutcicon.png" type="image/png">
+        <link rel="icon" href="http://scoutchorton.github.io/scoutcicon.png" type="image/png">
         <script>
         function fadingin(){
             var element = document.getElementById("navt");
@@ -15,7 +15,7 @@
         <script src="http://scoutchorton.github.io/periodic/periodic.js"></script>
     </head>
     <body>
-        <div w3-include-html="nav.html"></div>
+        <div w3-include-html="http://scoutchorton.github.io/nav.html"></div>
         <center>
             <div class="page">
               <h3>test.</h3>
