--- a/programming/electronegativity.html
+++ b/programming/electronegativity.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <title>scoutchorton</title>
-        <link rel="stylesheet" type="text/css" href="http://scoutchorton.github.io/styles.css" />
+        <link rel="stylesheet" type="text/css" href="https://scoutchorton.github.io/styles.css" />
         <link href="https://fonts.googleapis.com/css?family=Ubuntu|Ubuntu+Condensed" rel="stylesheet">
-        <link rel="icon" href="http://scoutchorton.github.io/scoutcicon.png" type="image/png">
+        <link rel="icon" href="https://scoutchorton.github.io/scoutcicon.png" type="image/png">
         <script>
         function fadingin(){
             var element = document.getElementById("navt");
@@ -12,10 +12,10 @@
         }
         </script>
         <script src="https://www.w3schools.com/lib/w3.js"></script>
-        <script src="http://scoutchorton.github.io/periodic/periodic.js"></script>
+        <script src="https://scoutchorton.github.io/periodic/periodic.js"></script>
     </head>
     <body>
-        <div w3-include-html="http://scoutchorton.github.io/nav.html"></div>
+        <div w3-include-html="../nav.html"></div>
         <center>
             <div class="page">
               <h3>test.</h3>
@@ -26,7 +26,7 @@
             <br>
             <table width="100%">
                 <tr>
-                    <td id="socicons" align="center" ><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
+                    <td id="socicons" align="center" ><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="https://scoutchorton.github.io/yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="https://scoutchorton.github.io/gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="https://scoutchorton.github.io/gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
                 </tr>
             </table>
         </div>
