--- a/programming/electronegativity.html
+++ b/programming/electronegativity.html
@@ -26,7 +26,7 @@
             <br>
             <table width="100%">
                 <tr>
-                    <td id="socicons" align="center" ><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="https://scoutchorton.github.io/yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="https://scoutchorton.github.io/gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="https://scoutchorton.github.io/gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
+                    <td style="text-align: left;" width="33%"></td><td id="socicons" align="center" ><a href="https://www.youtube.com/user/scoutchorton" target="_blank"><img src="https://scoutchorton.github.io/yousocicon.png"></a><a href="https://github.com/scoutchorton" target="_blank"><img src="https://scoutchorton.github.io/gitsocicon.png"></a><a href="https://plus.google.com/103984685841390951470" target="_blank"><img src="https://scoutchorton.github.io/gooplussocicon.png"></a></td><td style="text-align: right;" width="33%">Designed and maintained by scoutchorton.</td>
                 </tr>
             </table>
         </div>
