Added result area
Added placeholder text in the added result area

--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -20,6 +20,7 @@
             <div class="page">
               <h3>Periodic Word Generator</h3>
               <input type="text" placeholder="Phrase:"></input>
+              <div id="text"><span font-color="grey">Tpye phrase in above.</span></div>
             </div>
         </center>
         <div id="footer">
