Working phase of project

--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -20,7 +20,9 @@
                 var phrase = document.getElementById('phrase').value;
                 for(var i = 0; i < phrase.length; i++) {
                     console.log(typeof phrase[i]);
-                    console.log((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase());
+                    if(phrase[i+1] !== undefined) {
+                        console.log((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase());
+                    }
                     console.log(phrase[i].toUpperCase());
                     //if(elems.includes(phrase[i].toUpperCase() + phrase[i+1].toLowerCase())) {
                     //   elemPhrase.append(phrase[i].toUpperCase() + phrase[i+1].toLowerCase());
