Changed && to and

--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -21,7 +21,7 @@
                 var d = False;
                 for(var i = 0; i < phrase.length; i++) {
                     console.log(typeof phrase[i]);
-                    if((elems.includes((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase())) && (phrase[i+1] !== undefined) && (d === False)) {
+                    if((elems.includes((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase())) and (phrase[i+1] !== undefined) and (d === False)) {
                         console.log((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase());
                         d = True;
                     } else if(elems.includes((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase())) {
