--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -21,7 +21,7 @@
                 var d = false;
                 for(var i = 0; i < phrase.length; i++) {
                     console.log(typeof phrase[i]);
-                    if((elems.indexOf((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase()) >= 0) and (phrase[i+1] !== undefined) and (d === false)) {
+                    if((elems.indexOf((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase()) >= 0) && (phrase[i+1] !== undefined) && (d === false)) {
                         console.log((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase());
                         d = true;
                     } else if(elems.indexOf((phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase()) >= 0) {
