Updaed speling of falase

--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -31,7 +31,7 @@
                     console.log(dou);
                     if(d === false) {
                         console.log("d = false");
-                        if((dou !== falase) && (elems[0].indexOf(dou) >= 0)) {
+                        if((dou !== false) && (elems[0].indexOf(dou) >= 0)) {
                             console.log(dou + " passed");
                             elemPhrase.append(dou);
                             d = true;
