Working phase of project

--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -42,7 +42,8 @@
                         }
                         d = false;
                     }
-                    console.log(elemPhrase);
+                    console.log("Appended to elemPhrase" + toString(elemPhrase.append(sin)));
+                    console.log("elemPhrase " + toString(elemPhrase));
                 }
                 
                 /*
