Fixed UpperCase and LowerCase

--- a/programming/periodicword.html
+++ b/programming/periodicword.html
@@ -21,10 +21,10 @@
                 var d = false;
                 //Logic version 3
                 for(var i = 0; i < phrase.length; i++) {
-                    var sin = (phrase[i]).toUppercase();
+                    var sin = (phrase[i]).toUpperCase();
                     console.log(sin);
                     if(phrase[i+1] !== undefined) {
-                        var dou = (phrase[i]).toUppercase() + (phrase[i+1]).toLowercase();
+                        var dou = (phrase[i]).toUpperCase() + (phrase[i+1]).toLowerCase();
                     } else {
                         var dou = false;
                     }
